Added omnibox functionality
 - Added ability to open sessions with the omnibox.
 - Added omnibox help to the options page.
 - Reorganized background.js.
 - Removed ability to save sessions with a zero character name, because besides the UI issues it causes, it could have other unknown side effects.

--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
 		"default_popup": "popup.html"
 	},
 	"permissions": ["tabs"],
+	"omnibox": { "keyword": "session" },
 	"background_page": "background.html",
 	"options_page": "options.html"
 }
