--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
 	"name": "Session Manager",
-	"version": "3.4.3",
+	"version": "4.0.0",
+	"manifest_version": 2,
 	"description": "A simple yet powerful extension for managing sets of tabs.",
 	"icons": {
 		"16": "img/16.png",
@@ -12,8 +13,11 @@
 		"default_title": "Session Manager",
 		"default_popup": "popup.html"
 	},
-	"background_page": "background.html",
+	"background": {
+		"scripts": ["js/background.js"]
+	},
 	"offline_enabled": true,
+	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
 	"omnibox": { "keyword": "session" },
 	"options_page": "options.html",
 	"permissions": ["tabs"]
