--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
 		"default_popup": "popup.html"
 	},
 	"background": {
-		"scripts": ["js/background.js"]
+		"scripts": ["scripts/background.js"]
 	},
 	"offline_enabled": true,
 	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
