--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
 	"name": "Session Manager",
-	"version": "3.4.3",
+	"version": "3.4.4",
+	"manifest_version": 2,
 	"description": "A simple yet powerful extension for managing sets of tabs.",
 	"icons": {
 		"16": "img/16.png",
@@ -12,7 +13,11 @@
 		"default_title": "Session Manager",
 		"default_popup": "popup.html"
 	},
-	"background_page": "background.html",
+	"background": {
+		"scripts": ["scripts/errors.js", "scripts/background.js"]
+	},
+	"content_security_policy": "script-src 'self' https://d2tf6sbdgil6xr.cloudfront.net https://submit.ratchet.io https://ssl.google-analytics.com; object-src 'self'",
+	"minimum_chrome_version": "20",
 	"offline_enabled": true,
 	"omnibox": { "keyword": "session" },
 	"options_page": "options.html",
