--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Session Manager",
 	"version": "3.4.6",
 	"manifest_version": 2,
-	"description": "A simple yet powerful extension for managing sets of tabs.",
+	"description": "Simple yet powerful tabset management. Quickly and easily save, update, remove, and restore sets of tabs!",
 	"icons": {
 		"16": "img/16.png",
 		"48": "img/48.png",
