--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 	"background": {
 		"scripts": ["js/errors.js", "js/background.js"]
 	},
-	"content_security_policy": "script-src 'self' https://d37gvrvc0wt4s1.cloudfront.net https://api.rollbar.com https://ssl.google-analytics.com; object-src 'self'",
+	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
 	"minimum_chrome_version": "40",
 	"offline_enabled": true,
 	"omnibox": {
