--- a/manifest.json
+++ b/manifest.json
@@ -19,11 +19,11 @@
 		"scripts": ["js/errors.js", "js/background.js"]
 	},
 	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
-	"minimum_chrome_version": "40",
 	"offline_enabled": true,
 	"omnibox": {
 		"keyword": "session"
 	},
+	"options_page": "options.html",
 	"options_ui": {
 		"chrome_style": true,
 		"page": "options.html"
