--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"name": "Session Manager",
-	"version": "3.4.6",
 	"manifest_version": 2,
-	"description": "Simple yet powerful tabset management. Quickly and easily save, update, remove, and restore sets of tabs!",
+	"name": "Session Manager",
+	"version": "3.5.0",
+	"description": "Simple yet powerful tab set management. Quickly and easily save, update, remove, and restore sets of tabs!",
 	"icons": {
 		"16": "img/16.png",
-		"48": "img/48.png",
 		"128": "img/128.png"
 	},
 	"browser_action": {
@@ -19,10 +18,15 @@
 	"background": {
 		"scripts": ["js/errors.js", "js/background.js"]
 	},
-	"content_security_policy": "script-src 'self' https://d37gvrvc0wt4s1.cloudfront.net https://api.rollbar.com https://ssl.google-analytics.com; object-src 'self'",
-	"minimum_chrome_version": "26",
+	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
 	"offline_enabled": true,
-	"omnibox": { "keyword": "session" },
+	"omnibox": {
+		"keyword": "session"
+	},
 	"options_page": "options.html",
+	"options_ui": {
+		"chrome_style": true,
+		"page": "options.html"
+	},
 	"permissions": ["tabs"]
 }
