Upgrade to analytics.js

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 	"background": {
 		"scripts": ["js/errors.js", "js/background.js"]
 	},
-	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+	"content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
 	"offline_enabled": true,
 	"omnibox": {
 		"keyword": "session"
